--- a/Code/DMOP/pom.xml
+++ b/Code/DMOP/pom.xml
@@ -40,6 +40,18 @@
             <artifactId>moeaframework</artifactId>
             <version>2.13</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-ui-swing</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
