Code improvements and Initial DynamicNSGAII implementation to solve KnapsackProblem

--- a/Code/DMOP/src/main/resources/vnf_placement.properties
+++ b/Code/DMOP/src/main/resources/vnf_placement.properties
@@ -1,4 +1,5 @@
 #Parametros de Sistema
+problem.package = Problems/
 network.package = Network/NFS/
 file.name.links = Links.txt
 file.name.nodes = Nodes.txt
@@ -10,7 +11,7 @@ file.name.traffics = Traffic/traffics.txt
 file.name.solution = Solution/solutions.csv
 
 #Baja: media: alta:
-number.traffic = 2
+number.traffic = 10
 
 #Cantidad de caminos mas cortos
 k.shortest = 3
@@ -57,3 +58,14 @@ traffics.random = false
 
 #false para generar traficos nuevos y true si se lee el archivo de traficos (Solo en VnfServiceRandom)
 traffics.read.file = false
+
+python.interpreter.path = C:\\virtualEnv\\python36\\Scripts\\python3.6.exe
+python.script.filepath = C:\\virtualEnv\\python36\\Datorama\\MCDM\\dmop.py
+python.script.logfile = target/mcdm.log
+
+
+
+
+
+
+
