Manual running of the dynamic version

--- a/Code/DMOP/src/main/resources/vnf_placement.properties
+++ b/Code/DMOP/src/main/resources/vnf_placement.properties
@@ -7,11 +7,13 @@ file.name.servers = Servers.txt
 
 file.name.vnfs.sfc = VNF/VnfsSFC.txt
 file.name.vnfs.share = VNF/VnfsShare.txt
-file.name.traffics = Traffic/traffics.txt
+file.name.traffics = traffics.txt
 file.name.solution = Solution/solutions.csv
 
+traffics.folder = Traffic/
+
 #Baja: media: alta:
-number.traffic = 10
+number.traffic = 20
 
 #Cantidad de caminos mas cortos
 k.shortest = 3
@@ -62,6 +64,12 @@ traffics.read.file = false
 python.interpreter.path = C:\\virtualEnv\\python36\\Scripts\\python3.6.exe
 python.script.filepath = C:\\virtualEnv\\python36\\Datorama\\MCDM\\dmop.py
 python.script.logfile = target/mcdm.log
+
+# dynamic problem params
+
+# every two iterations of the algorithm
+change.frequency = 2
+change.severity = 1d
 
 
 
