Make fixed the length of Permutations. Save solutions a generate csv files to be used as input for chart creations.

--- a/Code/DMOP/src/main/resources/vnf_placement.properties
+++ b/Code/DMOP/src/main/resources/vnf_placement.properties
@@ -11,6 +11,7 @@ file.name.traffics = traffics.txt
 file.name.solution = Solution/solutions.csv
 
 traffics.folder = Traffic/
+solutions.folder = Solutions/
 
 #Baja: media: alta:
 number.traffic = 20
