Agregado .idea de Intelij en git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Code/DMOP/src/main/resources/Traffic/Traffic_6.txt
 Code/DMOP/src/main/resources/Traffic/Traffic_7.txt
 Code/DMOP/src/main/resources/Traffic/Traffic_8.txt
 Code/DMOP/src/main/resources/Traffic/Traffic_9.txt
+.idea
